--- a/notes.tex
+++ b/notes.tex
@@ -3,7 +3,7 @@
 \newtheorem{theorem}{Theorem}
 \newtheorem{definition}{Definition}
 \newtheorem{lemma}[theorem]{Lemma}
-\author{J. Ian Johnson}
+\author{Dionna Glaze}
 \title{Program Analysis Lecture Notes}
 \begin{document}
 \maketitle
